fixed overflow

--- a/public/themes/round_round_baby.css
+++ b/public/themes/round_round_baby.css
@@ -29,3 +29,7 @@
 #middle {
   animation: woah 5s infinite linear;
 }
+
+body {
+  overflow: hidden;
+}
